Fixed arrows vertical alignment

--- a/index.sass
+++ b/index.sass
@@ -141,6 +141,7 @@
   text-align: center
   margin-top: 39px
   padding: 0
+  position: relative
   font-family: openSansRegular
   &__item
     display: inline-block
@@ -152,8 +153,8 @@
     width: 100%
   &__arrow
     display: inline-block
-    vertical-align: top
-    margin: 36px 0 0 4px
+    position: absolute
+    top: 35%
     width: 8px
   &__img
     width: 48%
